Remove warning and use records for Achievements code