@@ -1,7 +1,6 @@
 package com.faforever.api.achievements;
 
 import com.faforever.api.data.JsonApiMediaType;
-import com.faforever.api.error.ProgrammingError;
 import com.faforever.api.security.OAuthScope;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableMap.Builder;
@@ -18,7 +17,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Arrays;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/achievements")
@@ -26,42 +24,34 @@ import java.util.stream.Collectors;
 public class AchievementsController {
 
   private final AchievementService achievementService;
-  private AtomicInteger nextUpdateId = new AtomicInteger();
+  private final AtomicInteger nextUpdateId = new AtomicInteger();
 
   @ApiOperation(value = "Updates the state and progress of one or multiple achievements.")
   @PreAuthorize("#oauth2.hasScope('" + OAuthScope._WRITE_ACHIEVEMENTS + "')")
   @RequestMapping(value = "/update", method = RequestMethod.PATCH, produces = JsonApiMediaType.JSON_API_MEDIA_TYPE)
   public JsonApiDocument update(@RequestBody AchievementUpdateRequest[] updateRequests) {
     return new JsonApiDocument(new Data<>(Arrays.stream(updateRequests)
-        .map(request -> {
-          switch (request.getOperation()) {
-            case REVEAL:
-              throw new UnsupportedOperationException("REVEAL is not yet implemented");
-            case UNLOCK:
-              return achievementService.unlock(request.getPlayerId(), request.getAchievementId());
-            case INCREMENT:
-              return achievementService.increment(request.getPlayerId(), request.getAchievementId(), request.getSteps());
-            case SET_STEPS_AT_LEAST:
-              return achievementService.setStepsAtLeast(request.getPlayerId(), request.getAchievementId(), request.getSteps());
-            default:
-              throw new ProgrammingError("Uncovered update type: " + request.getOperation());
-          }
-        })
-        .map(this::toResource)
-        .collect(Collectors.toList())));
+      .map(request -> switch (request.operation()) {
+        case REVEAL -> throw new UnsupportedOperationException("REVEAL is not yet implemented");
+        case UNLOCK -> achievementService.unlock(request.playerId(), request.achievementId());
+        case INCREMENT -> achievementService.increment(request.playerId(), request.achievementId(), request.steps());
+        case SET_STEPS_AT_LEAST -> achievementService.setStepsAtLeast(request.playerId(), request.achievementId(), request.steps());
+      })
+      .map(this::toResource)
+      .toList()));
   }
 
   private Resource toResource(UpdatedAchievementResponse updatedAchievementResponse) {
     Builder<String, Object> attributesBuilder = ImmutableMap.<String, Object>builder()
-        .put("achievementId", updatedAchievementResponse.getAchievementId())
-        .put("state", updatedAchievementResponse.getState())
-        .put("newlyUnlocked", updatedAchievementResponse.isNewlyUnlocked());
+      .put("achievementId", updatedAchievementResponse.achievementId())
+      .put("state", updatedAchievementResponse.state())
+      .put("newlyUnlocked", updatedAchievementResponse.newlyUnlocked());
 
-    if (updatedAchievementResponse.getCurrentSteps() != null) {
-      attributesBuilder.put("currentSteps", updatedAchievementResponse.getCurrentSteps());
+    if (updatedAchievementResponse.currentSteps() != null) {
+      attributesBuilder.put("currentSteps", updatedAchievementResponse.currentSteps());
     }
 
     return new Resource("updatedAchievement", String.valueOf(nextUpdateId.getAndIncrement()),
-        attributesBuilder.build(), null, null, null);
+      attributesBuilder.build(), null, null, null);
   }
 }
